# where

./: .packages  README.md  a.html  build.gradle  gradle.properties  http.dart  json.dart  main.dart  msgbox.dart  pubspec.yaml  regexp.dart  settings.gradle  version.properties  win32.dart
.dart_tool/: package_config.json
.github/workflows/: android.yml
app/: CMakeLists.txt  build.gradle
app/release/: output.json
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: where.cpp
app/src/main/res/anim/: black_show_fade_in.xml  button_click_scrollview_hide.xml  button_click_scrollview_show.xml  code_load_animation.xml  desktop_show.xml  home_imagebutton_move_bottom.xml  home_scale_in.xml  home_scrollview_button_click_textview_show_fade_in.xml  home_scrollview_show.xml  next_show.xml  (+16 more)
csam/: a.exe.stackdump  a.id0  a.id1  a.idb  a.out  ansicol.h  b64.c  base64.h  c.h  c.md  cen.md  guicol.c  help-doc.html  hex.c  hexcvet.h  lcjc.h  main.c  mesty.h  ocv.cpp  ocv.h  ocvimgc.hpp  platf.h  sort.c  sort.h.gch  tcha.h  test.c  test.s
csam/cbook/: index.md
gradle/wrapper/: gradle-wrapper.properties
meyou/: CMakeLists.txt  build.gradle
meyou/src/androidTest/java/com/meyou/: ExampleInstrumentedTest.java
meyou/src/main/: AndroidManifest.xml
meyou/src/main/cpp/: meyou.cpp
meyou/src/main/cpp/include/: simple.h
meyou/src/main/java/com/meyou/: CallBackListener.java  Dialog.java  Download.java  DownloadListener.java  Focus.java  Fragment.java  FunTouchListener.java  Me.java  ReadBytesListener.java  UIState.java
meyou/src/test/java/com/meyou/: ExampleUnitTest.java
(+168 files in other folders)
